1.6		2010 May ??
		Bugfix for greedy separator code (thx to Chillman)
		Imported C rules from RATS
		Started test suite transition to the Junio C Hamano Git inspired one
		Added case insensitive switch (thx to Chillman for patch)

1.5		2009 December 06
		New features for server wide install
		Source distro file for package maintainers
		Signature bug fixes
		New php, python and perl signatures
		Deprecating the rough signature set
		Fixed graudit usage text
		Improved documentation
		Several color modes supported


1.4		2009 November 23
		New and improved signatures
		Graceful detection of grep version < 2.5.3
		Preparing for version 1.5

1.3		2009 October 31
		Some signatures added to existing databases
		Signature improvements to existing databases
		Added JSP ruleset
		Added ASP ruleset
		Improved testing
		
1.2		2009 September 18
		Default signatures aimed at low hanging fruit
		Improved documentation
		Bug fixes to graudit and signatures

1.1		2009 July 29
		Improved custom db options
		Improved signatures for several languages
		A few minor tweaks

1.0		2009 June 14
		Initial release on github

Older versions
		The initial concept is something I have used for a long time, I can't
		quite remember when I decided to make it into a more structured
		script, but here we are anyway.