@@ -3,6 +3,9 @@
 		Imported C rules from RATS
 		Started test suite transition to the Junio C Hamano Git inspired one
 		Added case insensitive switch (thx to Chillman for patch)
+		Dotnet signatures (thx to Chillman again)
+		Discontinued the rough database
+		Added the combined database "all"
 
 1.5		2009 December 06
 		New features for server wide install
